# energy-consumption

./: .gitignore  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: fetch-and-preprocess-data.yml
data/preprocessed/: final_dataset.csv
data/raw/energy_demand/: energy_demand.json
data/raw/weather/forecast/: weather_forecast.json
data/raw/weather/history/: weather_history.json
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  energy_demand_suite.json
machine-learning/: pyproject.toml
machine-learning/gx/: gx_datasource_config.ipynb  run_checkpoint.py
machine-learning/gx/checkpoints/: energy_demand_checkpoint.yml
machine-learning/notebooks/: training_model.ipynb
machine-learning/reports/: data_testing_report.html  index.html
machine-learning/src/data/fetch/: fetch_weather_forecast_data.py  fetch_weather_past_data.py
machine-learning/src/data/preprocess/: merge_datasets.py
machine-learning/src/data/utils/: weather_utils.py
reports/: data_testing_report.html  index.html
src/data/fetch/: fetch_energy_demand_data.py  fetch_weather_forecast_data.py  fetch_weather_past_data.py
src/data/preprocess/: merge_datasets.py  preprocess_energy_demand.py
src/data/test/: test_data.py
src/models/: preprocess.py  train.py
