[project]
name = "iis-projekt-energija"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc[s3]>=3.67.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyaml>=26.2.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
]
